--- a/.github/workflows/learn-github-actions.yaml
+++ b/.github/workflows/learn-github-actions.yaml
@@ -17,3 +17,14 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+  setup-go:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup Go environment
+        uses: actions/setup-go@v3.0.0
+        with:
+          # The Go version to download (if necessary) and use. Supports semver spec and ranges.
+          go-version: 17
+          # Set this option to true if you want the action to always check for the latest available version that satisfies the version spec
+          check-latest: true
+      - run: go version
