--- a/.github/workflows/learn-github-actions.yaml
+++ b/.github/workflows/learn-github-actions.yaml
@@ -2,6 +2,7 @@ name: learn-github-actions
 on: [push]
 jobs:
   check-bats-version:
+    if: ${{ github.ref == 'master' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -11,6 +12,7 @@ jobs:
       - run: npm install -g bats
       - run: bats -v
   list-dir:
+    if: ${{ github.ref == 'master' }}
     runs-on: ubuntu-latest
     steps:
       - name: List files in the repository
@@ -18,6 +20,7 @@ jobs:
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
   setup-go:
+    if: ${{ github.ref == 'master' }}
     runs-on: ubuntu-latest
     steps:
       - name: Setup Go environment
