--- a/.github/workflows/print-contexts.yaml
+++ b/.github/workflows/print-contexts.yaml
@@ -18,3 +18,18 @@ jobs:
         run: echo '${{ toJSON(strategy) }}'
       - name: Dump matrix context
         run: echo '${{ toJSON(matrix) }}'
+  
+  run_if_branch_master:
+    if: ${{ github.ref == 'master' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run If Push to master branch
+        run: echo 'Hey im running on master'
+  
+  run_if_branch_not_master:
+    if: ${{ github.ref != 'master' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run If Push to another branch
+        run: echo 'Hey im running on ${{ github.ref }}'
+        
