--- a/.github/workflows/print-contexts.yaml
+++ b/.github/workflows/print-contexts.yaml
@@ -32,4 +32,21 @@ jobs:
     steps:
       - name: Run If Push to another branch
         run: echo 'Hey im running on ${{ github.ref }}'
-        
+  
+  postgres-job:
+    if: ${{ github.ref != 'master' }}
+    runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_PASSWORD: postgres
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+        ports:
+          # Maps TCP port 5432 in the service container to a randomly chosen available port on the host.
+          - 5432
+
+    steps:
+      - uses: actions/checkout@v2
+      - run: pg_isready -h localhost -p ${{ job.services.postgres.ports[5432] }}
+      - run: ./run-tests
