--- a/.github/workflows/learn-github-actions.yaml
+++ b/.github/workflows/learn-github-actions.yaml
@@ -31,8 +31,9 @@ jobs:
           # Set this option to true if you want the action to always check for the latest available version that satisfies the version spec
           check-latest: true
       - run: go version
-      
+
   randomly-failing-job:
+    if: ${{ github.ref != 'master'}}
     runs-on: ubuntu-latest
     steps:
       - id: checkout
@@ -43,3 +44,18 @@ jobs:
       - name: Pass or fail
         run: |
           if [[ ${{ steps.generate_number.outputs.random_number }} == 0 ]]; then exit 0; else exit 1; fi
+  
+  test-matrix:
+    if: ${{ github.ref == 'master' }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+        node: [14, 16]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node }}
+      - name: Fake Install dependencies
+        run: pwd && ls -lah
