print default runner env

--- a/.github/workflows/learn-github-actions.yaml
+++ b/.github/workflows/learn-github-actions.yaml
@@ -59,3 +59,4 @@ jobs:
           node-version: ${{ matrix.node }}
       - name: Fake Install dependencies
         run: pwd && ls -lah
+      - run: env
