--- a/.github/workflows/learn-github-actions.yaml
+++ b/.github/workflows/learn-github-actions.yaml
@@ -1,12 +1,12 @@
 name: learn-github-actions
-on: [push]
+on: push
 
 env:
   DAY_OF_WEEK: Monday
 
 jobs:
   check-bats-version:
-    if: ${{ github.ref == 'master' }}
+    if: ${{ github.ref == 'refs/heads/master' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -16,7 +16,7 @@ jobs:
       - run: npm install -g bats
       - run: bats -v
   list-dir:
-    if: ${{ github.ref == 'master' }}
+    if: ${{ github.ref == 'refs/heads/master' }}
     runs-on: ubuntu-latest
     steps:
       - name: List files in the repository
@@ -24,7 +24,7 @@ jobs:
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
   setup-go:
-    if: ${{ github.ref == 'master' }}
+    if: ${{ github.ref == 'refs/heads/master' }}
     runs-on: ubuntu-latest
     steps:
       - name: Setup Go environment
@@ -37,7 +37,7 @@ jobs:
       - run: go version
 
   randomly-failing-job:
-    if: ${{ github.ref != 'master'}}
+    if: ${{ github.ref != 'refs/heads/master'}}
     runs-on: ubuntu-latest
     steps:
       - id: checkout
@@ -50,7 +50,7 @@ jobs:
           if [[ ${{ steps.generate_number.outputs.random_number }} == 0 ]]; then exit 0; else exit 1; fi
   
   test-matrix:
-    # if: ${{ github.ref == 'master' }}
+    # if: ${{ github.ref == 'refs/heads/master' }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -66,7 +66,7 @@ jobs:
       - run: env
 
   greeting_job:
-    if: ${{ github.ref == 'master' }}
+    if: ${{ github.ref == 'refs/heads/master' }}
     runs-on: ubuntu-latest
     env:
       Greeting: Hello
