--- a/.github/workflows/docker-actions.yaml
+++ b/.github/workflows/docker-actions.yaml
@@ -4,7 +4,7 @@ on: push
 jobs:
   docker_build_push:
     if: ${{ github.ref == 'refs/heads/master' }}
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: checkout
         uses: actions/checkout@v2
